# F1-stats

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: main.py  utils.py
